--- a/common.css
+++ b/common.css
@@ -48,7 +48,7 @@ body {
 .header h1 {
     margin: 0;
     font-size: clamp(22px, 4.5vw, 36px);
-    font-weight: normal;
+    font-weight: 600;
 }
 
 .nav {
